# whoop-to-gsheets

./: README.md  pyproject.toml  sync_whoop_to_gsheets.py  whoop_auth.py
.github/workflows/: sync_whoop_to_gsheets.yml
